--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # Dependencies
-app/web/node_modules/*
+node_modules/
+**/node_modules/
 .pnp
 .pnp.js
 
@@ -12,11 +13,10 @@ coverage/
 # Next.js (Frontend)
 app/web/.next/
 app/web/out/
-app/web/.next/
-app/web/build
-app/web/dist
-app/web/.turbo
-app/web/.vercel
+app/web/build/
+app/web/dist/
+app/web/.turbo/
+app/web/.vercel/
 
 # Production
 build/
@@ -41,7 +41,7 @@ lerna-debug.log*
 .env.production.local
 
 # Vercel
-.vercel
+.vercel/
 
 # TypeScript
 *.tsbuildinfo
@@ -56,7 +56,7 @@ __pycache__/
 app/server/venv/
 app/server/env/
 app/server/ENV/
-app/server/.venv
+app/server/.venv/
 app/server/*.db
 app/server/*.sqlite
 app/server/sql_app.db
