fix: users, conexion db, backend con frontend, funcionamiento local al momento

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "cd app/web && npm run dev",
     "dev:web": "cd app/web && npm run dev",
     "dev:server": "cd app/server && npm run dev",
-    "dev:all": "concurrently \"npm run dev:server\" \"npm run dev:web\"",
+    "dev:all": "npx concurrently \"npm run dev:server\" \"npm run dev:web\"",
+    "start:dev": "npx concurrently \"npm run dev:server\" \"npm run dev:web\"",
     "build": "cd app/web && npm run build",
     "build:server": "cd app/server && npm run build",
     "start": "cd app/web && npm start",
