--- a/app/server/vercel.json
+++ b/app/server/vercel.json
@@ -1,21 +1,22 @@
 {
   "version": 2,
   "builds": [
+
     {
-      "src": "server/src/index.ts",
+      "src": "app/server/src/index.ts",
       "use": "@vercel/node"
     },
+ 
     {
-      "src": "app/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "src": "app/web/package.json",
+      "use": "@vercel/next"
     }
   ],
   "routes": [
+
     {
       "src": "/api/(.*)",
-      "dest": "/server/src/index.ts"
-    },
-    { "src": "/(.*)", "dest": "/app/dist/$1" }
+      "dest": "app/server/src/index.ts"
+    }
   ]
 }
