--- a/app/server/vercel.json
+++ b/app/server/vercel.json
@@ -15,7 +15,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "app/server/src/index.ts?path=$1"
+      "dest": "app/server/src/index.ts"
     },
     {
       "handle": "filesystem"
