--- a/app/server/vercel.json
+++ b/app/server/vercel.json
@@ -1,28 +1,9 @@
 {
   "version": 2,
-  "builds": [
-
+  "rewrites": [
     {
-      "src": "app/web/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
-    },
-    {
-      "src": "app/server/src/index.ts",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "app/server/src/index.ts"
-    },
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "app/web/dist/index.html"
+      "source": "/(.*)",
+      "destination": "/api"
     }
   ]
 }
