fix: Actualizar rutas y configuraciones en vercel.json y package.json para mejorar el despliegue

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "typecheck:server": "cd app/server && npm run typecheck",
     "install:web": "cd app/web && npm install",
     "install:server": "cd app/server && npm install",
-    "install:all": "npm run install:server && npm run install:web"
+    "install:all": "npm run install:server && npm run install:web",
+      "build": "vite build"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
