--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "typecheck:server": "cd app/server && npm run typecheck",
     "install:web": "cd app/web && npm install",
     "install:server": "cd app/server && npm install",
-    "install:all": "npm run install:server && npm run install:web"
+    "install:all": "npm run install:server && npm run install:web",
+    "build": "vite build"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
@@ -39,6 +40,8 @@
     "app/server"
   ],
   "dependencies": {
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
     "postgres": "^3.4.7"
   }
 }
